--- a/alpha_front/pubspec.yaml
+++ b/alpha_front/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.8
+  percent_indicator: ^4.2.4
 
 
   # The following adds the Cupertino Icons font to your application.
