--- a/alpha_front/pubspec.yaml
+++ b/alpha_front/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   image_picker: ^1.1.2
   string_similarity: ^2.1.1
+  card_swiper: ^3.0.1
 
 dev_dependencies:
   flutter_test:
