--- a/alpha_front/pubspec.yaml
+++ b/alpha_front/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   image_picker: ^1.1.2
   string_similarity: ^2.1.1
   card_swiper: ^3.0.1
+  linear_progress_bar: ^1.1.3
 
 dev_dependencies:
   flutter_test:
