--- a/alpha_front/pubspec.yaml
+++ b/alpha_front/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   string_similarity: ^2.1.1
   card_swiper: ^3.0.1
   linear_progress_bar: ^1.1.3
+  fl_chart: ^0.71.0
 
 dev_dependencies:
   flutter_test:
@@ -81,9 +82,41 @@ flutter:
       fonts:
         - asset: assets/fonts/Jalnan2TTF.ttf
 
-    - family: PretendardVariable
+    - family: Pretendard-black
       fonts:
-        - asset: assets/fonts/PretendardVariable.ttf
+        - asset: assets/fonts/Pretendard-Black.ttf
+        
+    - family: Pretendard-thin
+      fonts:
+        - asset: assets/fonts/Pretendard-Thin.ttf
+
+    - family: Pretendard-regular
+      fonts:
+        - asset: assets/fonts/Pretendard-Regular.ttf
+
+    - family: Pretendard-extralight
+      fonts:
+        - asset: assets/fonts/Pretendard-ExtraLight.ttf
+
+    - family: Pretendard-light
+      fonts:
+        - asset: assets/fonts/Pretendard-Light.ttf
+
+    - family: Pretendard-extrabold
+      fonts:
+        - asset: assets/fonts/Pretendard-ExtraBold.ttf
+
+    - family: Pretendard-bold
+      fonts:
+        - asset: assets/fonts/Pretendard-Bold.ttf
+
+    - family: Pretendard-semibold
+      fonts:
+        - asset: assets/fonts/Pretendard-SemiBold.ttf
+        
+    - family: Pretendard-medium
+      fonts:
+        - asset: assets/fonts/Pretendard-Medium.ttf
 
 
   #   - family: Trajan Pro
