--- a/alpha_front/pubspec.yaml
+++ b/alpha_front/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   card_swiper: ^3.0.1
   linear_progress_bar: ^1.1.3
   fl_chart: ^0.71.0
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
