--- a/alpha_front/pubspec.yaml
+++ b/alpha_front/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   linear_progress_bar: ^1.1.3
   fl_chart: ^0.71.0
   http: ^1.4.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
