--- a/alpha_front/pubspec.yaml
+++ b/alpha_front/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   fl_chart: ^0.71.0
   http: ^1.4.0
   shared_preferences: ^2.5.3
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
