EDIT: Home design

--- a/alpha_front/pubspec.yaml
+++ b/alpha_front/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: ^1.4.0
   shared_preferences: ^2.5.3
   provider: ^6.1.5
+  gradient_elevated_button: ^1.0.10
 
 dev_dependencies:
   flutter_test:
