--- a/alpha_front/pubspec.yaml
+++ b/alpha_front/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   shared_preferences: ^2.5.3
   provider: ^6.1.5
   gradient_elevated_button: ^1.0.10
+  timer_builder: ^2.0.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
