--- a/alpha_front/pubspec.yaml
+++ b/alpha_front/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   gradient_elevated_button: ^1.0.10
   timer_builder: ^2.0.0
   intl: ^0.17.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
